# ArgsParserCpp

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog.md  README.md
.github/workflows/: ci.yml
doc/: Doxyfile.in
includes/: myArgsParser.h
includes/ArgsParserCpp/: myArgsParser.h  types.h
src/: myArgsParser.cpp
tests/: CMakeLists.txt  test_myArgsParser.cpp  test_myArgsParser_addArguments.cpp  test_myArgsParser_parseArgs.cpp
